# controllers/usuariosController.js
@@ -1,7 +1,9 @@
 const bcrypt = require('bcrypt');
 const jwt = require('jsonwebtoken');
-const usuarios = [];
 const nodemailer = require('nodemailer');
+const path = require('path');
+const crypto = require('crypto');
+const usuarios = [];
 
 const generateToken = (user) => {
   return jwt.sign({ id: user.id, role: user.role }, 'your_secret_key', { expiresIn: '1h' });
@@ -13,6 +15,7 @@ const createDefaultUsers = async () => {
     { email: 'admin@example.com', password: 'admin123', role: 'ADMIN', telefono: '123456789' },
     { email: 'panadero@example.com', password: 'panadero123', role: 'PANADERO', telefono: '987654321' },
     { email: 'user@example.com', password: 'user123', role: 'USER', telefono: '456123789' },
+    { email: 'lucas.aguiar@estudiantes.utec.edu.uy', password: 'user123', role: 'USER', telefono: '456123789' },
   ];
 
   for (const user of defaultUsers) {
@@ -73,32 +76,63 @@ const forgotPassword = async (req, res) => {
   const { email } = req.body;
   const user = usuarios.find(u => u.email === email);
 
-  if (user) {
-    const transporter = nodemailer.createTransport({
-      service: 'gmail',
-      auth: {
-        user: 'labriasistemadegetiondepedidos@gmail.com',
-        pass: 'jmtb hxyb qjls qaf'
-      }
-    });
-    
-    // Paso 4: Definir las opciones del correo electrónico
-    const mailOptions = {
-      from: 'labriasistemadegetiondepedidos@gmail.com', // Remitente
-      to: email, // Destinatario
-      subject: 'Asunto del correo', // Asunto
-      text: 'Contenido del correo.' // Cuerpo del mensaje
-    };
-    
-    // Paso 5: Enviar el correo electrónico
-    transporter.sendMail(mailOptions, (error, info) => {
-      if (error) {
-        console.log(error);
-      } else {
-        console.log('Correo enviado: ' + info.response);
-      }
-    });
+  if (!user) {
+    return res.status(404).json({ message: 'Usuario no encontrado' });
   }
+
+  const token = crypto.randomBytes(32).toString('hex');
+  user.resetPasswordToken = token;
+  user.resetPasswordExpires = Date.now() + 3600000; // 1 hora de expiración
+
+  const transporter = nodemailer.createTransport({
+    service: 'gmail',
+    auth: {
+      user: 'laboratorioria04@gmail.com',
+      pass: 'mbxz jxvr hbmt xpye' // Usa variables de entorno en producción
+    }
+  });
+
+  const mailOptions = {
+    from: 'laboratorioria04@gmail.com',
+    to: user.email,
+    subject: 'Restablecimiento de contraseña',
+    html: `
+      <p>Por favor, haz clic en el siguiente enlace para restablecer tu contraseña:</p>
+      <p><a href="http://localhost:4200/reset-password/${token}">Restablecer contraseña</a></p>
+      <p>Gracias,<br>El equipo de soporte</p>
+      <img src="cid:unique@nodemailer.com"/>
+    `,
+    attachments: [{
+      filename: 'imagen.png',
+      path: path.join(__dirname, '../asset/imagen.png'), // Ruta a la imagen en tu servidor
+      cid: 'unique@nodemailer.com'
+    }]
+  };
+
+  transporter.sendMail(mailOptions, (error, info) => {
+    if (error) {
+      console.log(error);
+      return res.status(500).json({ message: 'Error al enviar el correo electrónico' });
+    } else {
+      console.log('Correo enviado: ' + info.response);
+      return res.status(200).json({ message: 'Correo enviado correctamente' });
+    }
+  });
+};
+
+const resetPassword = async (req, res) => {
+  const { token, newPassword } = req.body;
+  const user = usuarios.find(u => u.resetPasswordToken === token && u.resetPasswordExpires > Date.now());
+
+  if (!user) {
+    return res.status(400).json({ message: 'Token inválido o expirado' });
+  }
+
+  user.password = await bcrypt.hash(newPassword, 10);
+  user.resetPasswordToken = undefined;
+  user.resetPasswordExpires = undefined;
+
+  res.json({ message: 'Contraseña restablecida con éxito' });
 };
 
 const enableUser = (req, res) => {
@@ -134,6 +168,7 @@ module.exports = {
   login,
   changePassword,
   forgotPassword,
+  resetPassword,
   enableUser,
   disableUser,
   getPanaderos
